[package]
name = "gl-matrix4rust"
description = "gl-matrix port version for Rust"
authors = ["MagicCrazyMan <350088648@qq.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
half = { version = "2.3.1", features = ["rand_distr", "num-traits"] }
num-traits = "0.2.17"
rand = "0.8.5"
